<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".presenter.addCase.AddCaseFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_add">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Background"
            android:fontFamily="@font/vantamedium"
            android:hint="@string/name_case" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/name_Layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_Layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Background"
            android:fontFamily="@font/vantamedium"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_finish_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_end_time_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_creat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_date"
        app:layout_constraintTop_toBottomOf="@+id/btn_date" />

    <Button
        android:id="@+id/btn_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/btn_start_time_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_creat"
        app:layout_constraintEnd_toStartOf="@+id/btn_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_date_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_date" />

    <TextView
        android:id="@+id/txt_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/vantamedium"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/add_case_take_time_start"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_time"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_time"
        app:layout_constraintStart_toStartOf="@+id/btn_start_time"
        app:layout_constraintTop_toBottomOf="@+id/btn_date"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/vantamedium"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/add_case_take_end_time"
        app:layout_constraintBottom_toTopOf="@+id/btn_finish_time"
        app:layout_constraintEnd_toEndOf="@+id/btn_finish_time"
        app:layout_constraintStart_toStartOf="@+id/btn_finish_time"
        app:layout_constraintTop_toBottomOf="@+id/btn_date"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/vantamedium"
        android:text="@string/add_case_take_date"
        app:layout_constraintEnd_toEndOf="@+id/btn_date"
        app:layout_constraintStart_toStartOf="@+id/btn_date"
        app:layout_constraintTop_toBottomOf="@+id/description_Layout" />

    <Button
        android:id="@+id/btn_creat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_creat_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/errorTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="#600A0A"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btn_finish_time"
        app:layout_constraintStart_toStartOf="@+id/btn_start_time"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_time" />

    <ImageButton
        android:id="@+id/btn_back_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_add_shape"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>